# VainillaMachine

./: Cargo.toml  install.ps1  install.sh
.github/workflows/: build.yaml
examples/: factorial-cgen.vm  factorial.vm  fibonacci.vm  mcd.vm  reactangulo.vm  test.vm  test2.vm  tipo_numero.vm
src/: lib.rs  main.rs  parse.rs  vm.rs
