[package]
name = "vainilla-machine"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "VainillaMachine"
identifier = "com.ernestorb.vainilla_machine"
icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
copyright = "Copyright (c) Jane Doe 2016. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
long_description = """
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
eiusmod tempor incididunt ut labore et dolore magna aliqua.  Ut
enim ad minim veniam, quis nostrud exercitation ullamco laboris
nisi ut aliquip ex ea commodo consequat.
"""

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
